# TIRO

./: .env.example  .gitignore  ANALISI_COMPLETA.md  CLAUDE.md  DESIGN.md  README.md  TIRODocumentodispecifichediprodotto  docker-compose.yml
tiro-core/: CLAUDE.md  Dockerfile  alembic.ini  pyproject.toml
tiro-core/.gitnexus/: meta.json
tiro-core/alembic/: env.py
tiro-core/alembic/versions/: 002_indici_performance.py  8d11e162a991_schema_iniziale.py
tiro-core/tests/: conftest.py  test_approvatore.py  test_archivio.py  test_auth.py  test_ciclo.py  test_classificatore.py  test_classificatore_rischio.py  test_database.py  test_deduplicatore.py  test_embedding.py  test_equipaggio.py  test_esecutore.py  test_evento.py  test_fascicolo_builder.py  test_flussi.py  test_gdpr.py  test_integrazione_whatsapp.py  test_matcher.py  test_memoria_backend.py  test_messaggi.py  test_modelli_commerciale.py  test_modelli_core.py  test_modelli_sistema.py  test_notificatore.py  test_opportunita.py  test_parser.py  test_pipeline.py  test_posta.py  test_proposte_api.py  test_ricerca.py  test_scoring.py  test_soggetti.py  test_strumenti.py  test_task.py  test_trigger.py  test_voce.py
tiro-core/tiro_core/: celery_app.py  config.py  database.py  evento.py  main.py  seed.py
tiro-core/tiro_core/api/: auth.py  dipendenze.py  eventi_ws.py  fascicoli.py  flussi.py  opportunita.py  proposte.py  ricerca.py  router.py  sistema.py  soggetti.py  task.py
tiro-core/tiro_core/elaborazione/: __init__.py  classificatore.py  deduplicatore.py  embedding.py  matcher.py  parser.py  pipeline.py
(+44 files in other folders)
